sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: not found: value tab
		val temp=tab(i)
                         ^AlgInsertionSort:8: error: not found: value tab
		while(j>0 && tab(j-1>temp)){
                             ^AlgInsertionSort:9: error: not found: value tab
			tab(j)=tab(j-1)
                        ^AlgInsertionSort:12: error: not found: value tab
		tab(j)=temp
                ^